2006-04-19  Don Scorgie  <dscorgie@cvs.gnome.org>

	* configure.in: 
	Clean up configure.in a bit
	Fixes #337437

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2006-04-04  Brent Smith  <gnome@nextreality.net>

	* src/yelp-toc-pager.c: (xslt_yelp_document):
	cosmetic changes (put statements on one line where possible)
	* src/yelp-window.c: (window_do_load):
	Make the "About this Document" menu entry available after loading a
	DocBook XML file, since that is the only time it is relevant.

2006-04-04  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	Strip leading and training spaces from search terms
	Fixes #334568
	
2006-04-03  Brent Smith  <gnome@nextreality.net>

	* src/yelp-db-print-pager.c: (db_print_pager_dispose):
	* src/yelp-main.c: (slowly_and_stupidly_obtain_timestamp):
	* src/yelp-man-parser.c:
	* src/yelp-toc-pager.c: (process_mandir_pending),
	(xslt_yelp_document):
	* src/yelp-utils.c: (yelp_get_man_paths):
	* src/yelp-utils.h:
	Fix various compiler warnings, patch by Don Scorgie.  Fixes #326290

2006-04-03  Brent Smith  <gnome@nextreality.net>

	* data/man.xml.in: Add 3perl to the Perl Functions section

2006-04-03  Brent Smith  <gnome@nextreality.net>

	* src/yelp-search-pager.c: (snippet_closed), (snippet_response),
	(snippet_error), (finished_cb): various beagle signal and refcount
	fixes, patch from Joe Shaw.  Fixes #334938

2006-04-02  Gora Mohanty  <gmohanty@cvs.gnome.org>

	* configure.in: Re-added 'or' (Oriya) to ALL_LINGUAS, after
	doing a "cvs add" for po/or.po  

2006-04-02  Brent Smith  <gnome@nextreality.net>

	* configure.in:
	Remove "or" from ALL_LINGUAS since this breaks the build.
	* src/yelp-toc-pager.c: (toc_pager_dispose),
	(process_read_scrollkeeper), (files_are_equivalent),
	(process_omf_pending):
	oops, delete some debugging messages and clean up some compile
	warnings

2006-04-02  Brent Smith  <gnome@nextreality.net>
